--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -1,23 +1,22 @@
-source 'https://rubygems.org'
+source 'http://rubygems.org'
 
-ruby '2.3.0'
-gem 'rails', '4.2.6'
+gem 'rails', '3.1.0'
+
 # Bundle edge Rails instead:
 # gem 'rails',     :git => 'git://github.com/rails/rails.git'
 
 # for Heroku deployment - as described in Ap. A of ELLS book
 group :development, :test do
   gem 'sqlite3'
-  gem 'byebug'
+  gem 'ruby-debug19', :require => 'ruby-debug'
   gem 'database_cleaner'
   gem 'capybara'
   gem 'launchy'
-  gem 'rspec-rails'
 end
-
 group :test do
-  gem 'cucumber-rails' 
+  gem 'cucumber-rails'
   gem 'cucumber-rails-training-wheels'
+  gem 'rspec'
 end
 group :production do
 #  gem 'pg'
@@ -25,18 +24,20 @@ end
 
 # Gems used only for assets and not required
 # in production environments by default.
-
-  #gem 'therubyracer', '~> 0.12.0'
-gem 'sass-rails', '~> 5.0.3'
-gem 'coffee-rails', '~> 4.1.0'
-gem 'uglifier', '>= 2.7.1'
+group :assets do
+  gem 'therubyracer'              
+  gem 'sass-rails', "  ~> 3.1.0"
+  gem 'coffee-rails', "~> 3.1.0"
+  gem 'uglifier'
+end
 
 gem 'jquery-rails'
-gem 'haml'
-gem 'protected_attributes'
 
 # Use unicorn as the web server
 # gem 'unicorn'
 
 # Deploy with Capistrano
 # gem 'capistrano'
+
+# To use debugger
+gem 'haml'
