--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -1,22 +1,23 @@
-source 'http://rubygems.org'
+source 'https://rubygems.org'
 
-gem 'rails', '3.1.0'
-
+ruby '2.3.0'
+gem 'rails', '4.2.6'
 # Bundle edge Rails instead:
 # gem 'rails',     :git => 'git://github.com/rails/rails.git'
 
 # for Heroku deployment - as described in Ap. A of ELLS book
 group :development, :test do
   gem 'sqlite3'
-  gem 'ruby-debug19', :require => 'ruby-debug'
+  gem 'byebug'
   gem 'database_cleaner'
   gem 'capybara'
   gem 'launchy'
+  gem 'rspec-rails'
 end
+
 group :test do
-  gem 'cucumber-rails'
+  gem 'cucumber-rails' 
   gem 'cucumber-rails-training-wheels'
-  gem 'rspec'
 end
 group :production do
 #  gem 'pg'
@@ -24,20 +25,18 @@ end
 
 # Gems used only for assets and not required
 # in production environments by default.
-group :assets do
-  gem 'therubyracer'              
-  gem 'sass-rails', "  ~> 3.1.0"
-  gem 'coffee-rails', "~> 3.1.0"
-  gem 'uglifier'
-end
+
+  #gem 'therubyracer', '~> 0.12.0'
+gem 'sass-rails', '~> 5.0.3'
+gem 'coffee-rails', '~> 4.1.0'
+gem 'uglifier', '>= 2.7.1'
 
 gem 'jquery-rails'
+gem 'haml'
+gem 'protected_attributes'
 
 # Use unicorn as the web server
 # gem 'unicorn'
 
 # Deploy with Capistrano
 # gem 'capistrano'
-
-# To use debugger
-gem 'haml'
